third_party/move/move-compiler-v2/tests/lambda/inline-parity/generic_calls.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/generic_calls.move:47:17
   │
47 │         inlined(|s| s.id(), s)
   │                 ^^^^^^^^^^
